--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>{% block title %}Pangeo - COVID-19 Response{% endblock %}</title>
+    <title>{% block title %}Grand Challenges{% endblock %}</title>
     <link rel="icon" href="{{ static_url("custom/images/small_e_logo.png ") }}" sizes="any" type="image/png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,25 +35,23 @@
                         <p>
                             Welcome to the
                             <span class="italic">
-                                COVID-19 response Pangeo,
+                                University of Exeter Grand Challenges Platform,
                             </span>
-                            a data analysis platform for use by COVID-19 researchers.</p>
+                            a data analysis platform for use the Grand Challenges.</p>
                         <p>This service is an instance of <a href="https://pangeo-data.github.io" target="_new">Pangeo</a>.</p>
-                        <p>
+<!--                         <p>
                             <span class="italic">
                                 For assistance and to request a login, please contact
                             </span><br />
                             <a href="mailto:covid19@informaticslab.co.uk">covid19@informaticslab.co.uk</a>.
-                        </p>
+                        </p> -->
                         <p>
                             Met Office data provided on this platform must be attributed to the Met Office as the source
                             of the data by including the following attribution statement in any resulting products, publications or applications:<br />
                             "Contains Met Office data licensed under the Open Government Licence v3.0".
                         </p>
                         <p>
-                            With thanks to Microsoft, The Met Office and the EU
-                            <abbr title="European Regional Development Fund">ERDF</abbr>
-                            for making this possible.
+                            With thanks to Microsoft and The Met Office for making this possible.
                         </p>
                     </div>
                     <div class="container-login100-form-btn">
@@ -90,8 +88,7 @@
                 <span class="login100-form-title">
                     <img src="{{ static_url("custom/images/mo-black.svg") }}" id="MO-logo" alt="Met Office Logo">
                     <img src="{{ static_url("custom/images/Microsoft_Azure_Logo.png") }}" id="azure-logo" alt="Microsoft Azure Logo">
-                    <img src="{{ static_url("custom/images/impact_lab.png") }}" id="impact-lab-logo" alt="Impact Lab Logo">
-                    <img src="{{ static_url("custom/images/ERDF-logo.png") }}" id="ERDF-logo" alt="ERDF Logo">
+                    <img src="{{ static_url("custom/images/uoe.png") }}" id="impact-lab-logo" alt="University of Exeter Logo">
                 </span>
             </div>
         </div>
