--- a/templates/login.html
+++ b/templates/login.html
@@ -39,12 +39,12 @@
                             </span>
                             a data analysis platform for use the Grand Challenges.</p>
                         <p>This service is an instance of <a href="https://pangeo-data.github.io" target="_new">Pangeo</a>.</p>
-<!--                         <p>
+                         <p>
                             <span class="italic">
                                 For assistance and to request a login, please contact
                             </span><br />
-                            <a href="mailto:covid19@informaticslab.co.uk">covid19@informaticslab.co.uk</a>.
-                        </p> -->
+                            <a href="mailto:grandchallenge@informaticslab.co.uk">grandchallenge@informaticslab.co.uk</a>.
+                        </p> 
                         <p>
                             Met Office data provided on this platform must be attributed to the Met Office as the source
                             of the data by including the following attribution statement in any resulting products, publications or applications:<br />
